# Vocal2Midi

./: .gitignore  111.bat  ACKNOWLEDGEMENTS.md  README.md  app.py  app_fluent.py  app_pyside2.py  download_models.sh  environment.yml  infer_onnx.py  install.bat  linux使用指南.md  pyproject.toml  requirements.txt  run.bat  start.bat  tempCodeRunnerFile.py  test_asr.py  test_ja_asr_g2p.py  test_ja_lfa_match.py  test_qwen3_asr.py  test_slicer.py  启动GUI.bat  安装环境.bat
application/: __init__.py  config.py  exceptions.py  pipeline.py
configs/: midi.yaml  muon.yaml
deployment/: api.py  exporter.py
docs/: architecture.md
gui/: __init__.py  auto_lyric_view.py  fluent_main.py  fluent_utils.py  fluent_worker.py  global_settings_view.py  settings_utils.py
inference/: api.py  asr_api.py  asr_subprocess_worker.py  auto_lyric.py  auto_lyric_hybrid.py  callbacks.py  data.py  device_utils.py  game_api.py  hfa_api.py  lfa_api.py  me_infer.py  me_infer_module.py  onnx_api.py  quantization.py  rmvpe_api.py  slicer_api.py  ustx_api.py
inference/API/: api.py  asr_api.py  callbacks.py  data.py  game_api.py  hfa_api.py  lfa_api.py  rmvpe_api.py  slicer_api.py  ustx_api.py  utils.py
inference/HubertFA/: onnx_infer.py
inference/HubertFA/tools/: align_word.py  decoder.py  g2p.py  infer_base.py  metrics.py  plot.py
inference/funasr_nano/: dynamic_lyric_inference.py  utils.py  voice_activity_detector.py
inference/game/: alignment_utils.py  api.py  callbacks.py  data.py  onnx_runtime.py
inference/io/: note_io.py
inference/phonemeASR/: requirements.txt
inference/pipeline/: auto_lyric_hybrid.py
inference/quant/: quantization.py
inference/qwen3asr_dml/: __init__.py  asr.py  asr_worker.py  chinese_itn.py  encoder.py  llama.py  runtime.py  schema.py  utils.py
inference/romaji_asr/: __init__.py  common.py  infer_dml.py  runtime.py
modules/backbones/: ebf_with_joint_attention.py
scripts/: __init__.py  build_portable.py  qwen_llm_smoke.py  slice_asr_cli.py
settings/: vocal2midi.ini
tests/: __init__.py  test_asr_api.py  test_auto_lyric_hybrid_pipeline.py  test_build_portable.py  test_config.py  test_device_selection.py  test_exceptions.py  test_fluent_utils.py  test_game_api.py  test_hubertfa_decoder.py  test_lfa_api.py  test_note_io.py  test_pipeline.py  test_quantization.py  test_qwen3asr_runtime.py  test_rmvpe_api.py  test_settings_utils.py  test_slice_asr_cli.py  test_ustx_api.py
(+22 files in other folders)
